# Visual

./: CMakeLists.txt  README.md  main.cpp  rt_main.cpp  sb_main.cpp
AnimatedData/: FARML.txt  FARMR.txt  PELV.txt  UARML.txt  UARMR.txt
AnimatedData/hassan_240119_11h28/: FARML.txt  FARMR.txt  FOOTL.txt  FOOTR.txt  HANDL.txt  HANDR.txt  HEAD.txt  LLEGL.txt  LLEGR.txt  PELV.txt  PROP1.txt  SHOUL.txt  SHOUR.txt  STERN.txt  UARML.txt  UARMR.txt  ULEGL.txt  ULEGR.txt
AnimatedData/hassan_240119_11h31/: FARML.txt  FARMR.txt  FOOTL.txt  FOOTR.txt  HANDL.txt  HANDR.txt  HEAD.txt  LLEGL.txt  LLEGR.txt  PELV.txt  PROP1.txt  SHOUL.txt  SHOUR.txt  STERN.txt  UARML.txt  UARMR.txt  ULEGL.txt  ULEGR.txt
bvh/: cartwheel.bvh  modified_weights.txt  process_weight.py  run1.bvh  walkSit.bvh  weights.txt
cuda/: CMakeLists.txt  Texture.cu  main.cpp  main.cu  main.cuh  softbody2D.cu  softbody2D.cuh
include/: AnimatedJoint.h  AnimatedMesh.h  Collider.h  ConstraintSet.h  DoublePendulum.h  Drawable.h  FluidSim.h  GlobalVar.h  Grid.h  InputManager.h  Mesh.h  Octree.h  ParticleSystem.h  PerspectiveCamera.h  ProjectIncludes.h  RayTracingCamera.h  Scene.h  SceneId.h  Shader.h  SignedDistanceField.h  SoftBody.h  SoftBody2D.h  SpringGroup.h  Texture.h  bbox.h  bvh.h  joint.h  triangle.h
shaders/: default.fsh  default.vsh  defaultVertexColor.fsh  defaultVertexColor.vsh  defaultVertexNormal.fsh  defaultVertexNormal.vsh  default_texture.fsh  default_texture.vsh
shaders/raytracing/: rt.comp  rtsia.comp
src/: AnimatedJoint.cpp  AnimatedMesh.cpp  Collider.cpp  ConstraintSet.cpp  DoublePendulum.cpp  Drawable.cpp  FluidSim.cpp  Grid.cpp  InputManager.cpp  Mesh.cpp  Octree.cpp  ParticleSystem.cpp  PerspectiveCamera.cpp  RayTracingCamera.cpp  Scene.cpp  SceneId.cpp  Shader.cpp  SignedDistanceField.cpp  SoftBody.cpp  SoftBody2D.cpp  SpringGroup.cpp  Texture.cpp  bvh.cpp  joint.cpp  main.cpp
vendors/glad/: glad.c  glad.h
vendors/glm/: geometric.hpp
vendors/imgui/: imgui.cpp
